before changing the service
